-Added menu option to detect duplicates in the database.
-Ported missing import file formats from 1.x: SuperMemo7 text, SuperMemo from
 Palm, Cuecard WCU.
-Double-clicking on a saved set in 'Activate cards' now automatically selects
 the set and closes the window (requested by Michael Campbell).
-Added support for video files under Windows (contrary to Linux, they will
 play in an external window using mplayer).
-When you have both tags "A" and "A::B", the card browser will now show the
 first tag as "A::Untagged".
-In 'edit cards', make more robust of no longer warning about discarding
 changes if you did not make any.
-Sped up deleting of large number of cards from the card browser.
-When pasting into the "Add cards" or "Edit cards" dialog, respect the
 formatting of the card field.
-Changing card types and deleting cards from the card browser is now faster.
-No longer convert filenames to lower case on Windows (requested by Michael
 Campbell).
-Fix another crash involving duplicates while converting cards (reported by
 Gnome).
-Don't erase fields when cancelling a card type conversion (reported by Gnome).
-Fix harmless error message when converting to Cloze cards in the card browser
 (reported by Michael Campbell).
-Upgraded to lastest version of Qt/PyQt.


Mnemosyne 2.1 : 2012-09-10

-New import/export format to share cards, which also bundles the media files.
 Supports importing an updated version of the same exported cards, so that
 authors can release updated versions of their cards fixing e.g. spelling
 mistakes.
-Implemented txt export with tab-separated values.
-You can now specify more than 1 tag to add during import
 (requested by Barbara).
-In 'edit cards', no longer warn about discarding changes if you did not make
 any.
-Don't crash card browser when searching for \ (reported by Faemorleto).
-Fix bug where active tags would sometimes not have a checkbox in the card
 browser (reported by Gnome).